--- a/Task2/apzkr-pzpi-21-7-uvarenko-anton-task2/docker-compose.yaml
+++ b/Task2/apzkr-pzpi-21-7-uvarenko-anton-task2/docker-compose.yaml
@@ -1,4 +1,13 @@
 services:
+  app:
+    build: .
+    env_file: ".env"
+    ports:
+      - "8080:8080"
+    depends_on:
+      db:
+        condition: service_healthy
+
   db:
     image: mysql
     environment:
@@ -7,6 +16,10 @@ services:
       - '3306:3306'
     volumes:
      - my-db:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+      timeout: 20s
+      retries: 10
 
 volumes:
   my-db:
