--- a/Task2/apz-pzpi-21-7-uvarenko-anton-task2/docker-compose.yaml
+++ b/Task2/apz-pzpi-21-7-uvarenko-anton-task2/docker-compose.yaml
@@ -1,12 +1,12 @@
 services:
-  # app:
-  #   build: .
-  #   env_file: ".env"
-  #   ports:
-  #     - "8080:8080"
-  #   depends_on:
-  #     db:
-  #       condition: service_healthy
+  app:
+    build: .
+    env_file: ".env"
+    ports:
+      - "8080:8080"
+    depends_on:
+      db:
+        condition: service_healthy
 
   db:
     image: mysql
